<resources>
    <string name="app_name">GamingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fiery Gaming</string>
    <string name="nav_header_subtitle">carl.esparrago01@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_games">Games</string>
    <string name="menu_hall_of_fame">Hall Of Fame</string>
    <string name="menu_upcoming">Upcoming</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game">Game</string>
    <string name="release_date">Release Date:</string>
    <string name="top_critic_score">Top Critic Score:</string>
    <string name="platforms">Platforms:</string>
    <string name="description">Description</string>

</resources>